traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:12: error: ':' expected but ')' found.
def diagonale(y){
               ^TraversalDiagonal:36: error: identifier expected but '}' found.
}
^